--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <div class="carousel-container">
       <button id="prevBtn">Previous</button>
       <div class="carousel">
-        <div class="slide" style="background-image: url('image1.jpg')"></div>
-        <div class="slide" style="background-image: url('image2.jpg')"></div>
-        <div class="slide" style="background-image: url('image3.jpg')"></div>
+        <div class="slide" style="background-image: url('./image1.jpg')"></div>
+        <div class="slide" style="background-image: url('./image2.jpg')"></div>
+        <div class="slide" style="background-image: url('./image3.jpg')"></div>
       </div>
       <button id="nextBtn">Next</button>
+      <script src="./script.js"></script>
     </div>
   </body>
 </html>
