--- a/index.html
+++ b/index.html
@@ -5,17 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./styles.css" />
+    <script
+      src="https://kit.fontawesome.com/485b754357.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="carousel-container">
-      <button id="prevBtn">Previous</button>
+      <button style="color: #0e1c36" id="prevBtn">Previous</button>
       <div class="carousel">
         <div class="slide" style="background-image: url('./image1.jpg')"></div>
         <div class="slide" style="background-image: url('./image2.jpg')"></div>
         <div class="slide" style="background-image: url('./image3.jpg')"></div>
       </div>
-      <button id="nextBtn">Next</button>
-      <script src="./script.js"></script>
+      <button style="color: #0e1c36" id="nextBtn">Next</button>
     </div>
+    <br />
+    <center>
+      <div id="toDoList">
+        <h1>ADD A TASK:</h1>
+        <div>
+          <!-- Input field with limitaton -->
+          <input
+            id="inputTaskField"
+            name="inputTaskField"
+            type="text"
+            maxlength="50"
+            required
+          />
+          <i id="addTaskBtn" class="fa-solid fa-circle-plus"></i>
+        </div>
+        <ul id="taskList"></ul>
+      </div>
+    </center>
+    <script src="./main.js" type="module"></script>
   </body>
 </html>
